--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="严海翔（海怪）的个人网页，收录了很多好玩、沙雕的项目，以及技术文章。"
-    />
-    <title>海怪 - 个人主页</title>
+    <meta name="description" content="黄盛华的个人网页1.0" />
+    <title>HSH</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
